# metaweave

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
configs/: db_domains.yaml  db_domains.yaml.bak_20260317_230008  db_domains.yaml.bak_20260318_124614  db_domains.yaml.bak_20260319_065521  db_domains.yaml.bak_20260319_083044  db_domains.yaml.bak_20260319_115159  db_domains.yaml.bak_20260319_180247  db_domains.yaml.bak_20260320_001723  db_domains.yaml.bak_20260320_004316  db_domains.yaml.bak_20260320_012113  dim_tables.yaml  dim_tables.yaml.bak_20260320_012158  loader_config.yaml  loader_config.yaml_bak  logging.yaml  metadata_config.yaml  sql_rag.yaml  sql_rag.yaml_bak
docs/: 0.1_项目备忘录.md  0.Todo.md  100_执行命令完整参考.md  101_generate_domains_md_context_enhancement.md  10_rel+llm混合模式设计方案.md  11_is_unique统计唯一性在关系发现中的角色问题.md  12_REL复合键Stage1索引与乱序子集匹配改造.md  15_md步骤依赖DDL文件改造方案.md  16_remove_comment_cache_refactor.md  17_step_based_logging_refactor.md  18_all_step_orchestration_refactor.md  19_all_step_orchestration_logging_improvement.md  1_json_vs_json_llm_指标差异与计算方式.html  1_json_vs_json_llm_指标差异与计算方式.md  1_rel_llm_optimized_prompt_ignore_unreliable_logical_keys.txt  1_rel_llm_optimized_prompt_ignore_unreliable_logical_keys_v2.txt  1_rel_llm_optimized_prompt_ignore_unreliable_logical_keys_v3.txt  1_rel_llm_optimized_prompt_ignore_unreliable_logical_keys_v4.txt  1_rel_llm_关系发现LLM提示词模板.md  20_db_domains_mapping_refactor_design.md  2_json_llm_串行化与覆盖策略改造规划.md  2_json_llm基于json增强式改造规划.md  2_逻辑主键列数限制参数分析.md  (+45 more)
(+355 files in other folders)
